Correct the alignment on the theme-select
Ensure the toggle is always right aligned when there is more space then needed.

--- a/src/css/base/_document.css
+++ b/src/css/base/_document.css
@@ -33,6 +33,10 @@ header a[href="/"] {
 	}
 }
 
+header theme-select {
+	justify-self: end;
+}
+
 header nav a {
 	border-bottom: 0.125em solid transparent;
 
